# blockchain

./: README.md  transaction.txt
.metals/: metals.lock.db
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/default/: Makefile
_build/default/.dune/: configurator  configurator.v2
_build/default/.js/biniou/: biniou.cma.js
_build/default/.js/brr/: brr.cma.js
_build/default/.js/brr.note/: brr_note.cma.js
_build/default/.js/brr.poke/: brr_poke.cma.js
_build/default/.js/compiler-libs.bytecomp/: ocamlbytecomp.cma.js
_build/default/.js/compiler-libs.toplevel/: ocamltoplevel.cma.js
_build/default/.js/easy-format/: easy_format.cma.js
_build/default/.js/js_of_ocaml/: js_of_ocaml.cma.js
_build/default/.js/js_of_ocaml-compiler/: js_of_ocaml_compiler.cma.js
_build/default/.js/js_of_ocaml-toplevel/: js_of_ocaml_toplevel.cma.js
_build/default/.js/menhirLib/: menhirLib.cma.js
_build/default/.js/note/: note.cma.js
_build/default/.js/stdlib/: std_exit.cmo.js  stdlib.cma.js
_build/default/.js/yojson/: yojson.cma.js
_build/default/.ppx/a4ea0d83c521725fd7b0167e93f2550b/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/src/client/: dune  index.html  index.ml
_build/default/src/client/.index.eobjs/: index.ml.d
_build/default/src/client/.index.eobjs/byte/: dune__exe__Index.cmi  dune__exe__Index.cmo  dune__exe__Index.cmt
src/client/: .merlin  index.html  index.ml  test_index.html
src/server/: block.mli  blockchain.mli  dune
(+41 files in other folders)
