(executables
  (names index)
  (libraries brr brr.note brr.poke)
  (link_flags (:standard -linkall -no-check-prims))
  (modes byte))

(rule
  (targets index.js)
  (action
    (run %{bin:js_of_ocaml}
         -I %{lib:brr:.} -I .index.eobjs/byte ; to see the program's cmis
         --toplevel +toplevel.js +dynlink.js %{dep:index.bc} -o %{targets})))

(alias
  (name app)
  (deps index.js index.html))